--- a/book/slides/template_presentation.qmd
+++ b/book/slides/template_presentation.qmd
@@ -29,12 +29,12 @@ Title
 
 
 ## Quarto
-::: {style="text-align: left; margin-top: 2em"}
+::: {.theme-section}
 Quarto enables you to weave together content and executable code into a finished presentation. To learn more about Quarto presentations see <https://quarto.org/docs/presentations/>.
 :::
 
 ## Bullets
-::: {style="text-align: left; margin-top: 2em"}
+::: {.theme-section}
 When you click the **Render** button a document will be generated that includes:
 
 -   Content authored with markdown
